--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -11,6 +11,24 @@
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>register</servlet-name>
+    <servlet-class>com.ideas2it.controller.ProfileController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>register</servlet-name>
+    <url-pattern>/register</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>homePage</servlet-name>
+    <servlet-class>com.ideas2it.controller.ProfileController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>homePage</servlet-name>
+    <url-pattern>/homePage</url-pattern>
+  </servlet-mapping>
+
   <welcome-file-list>  
    <welcome-file>login.jsp</welcome-file>  
   </welcome-file-list>  
