--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -1,7 +1,4 @@
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-  version="2.5">
-
+<web-app>
   <servlet>
     <servlet-name>login</servlet-name>
     <servlet-class>com.ideas2it.controller.ProfileController</servlet-class>
@@ -27,6 +24,16 @@
   <servlet-mapping>
     <servlet-name>homePage</servlet-name>
     <url-pattern>/homePage</url-pattern>
+  </servlet-mapping>
+
+<servlet-mapping>
+    <servlet-name>homePage</servlet-name>
+    <url-pattern>/update</url-pattern>
+  </servlet-mapping>
+
+<servlet-mapping>
+    <servlet-name>homePage</servlet-name>
+    <url-pattern>/delete</url-pattern>
   </servlet-mapping>
 
   <welcome-file-list>  
