complete Exception and logger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=Printf
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto = update
+logging.level.root = info
+logging.file.name = logger.log
+logging.pattern.file="%d{yyyy-MM-dd HH:mm:ss} %p %m%n %l%n"
